<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nguye.o_remind.SetupActivity"
    android:orientation="horizontal">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/Timer"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/bgButtom"
                android:padding="10dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="7dp"
                    android:id="@+id/tvWorkDuration"
                    android:layout_width="wrap_content"
                    android:text="@string/Work_Duration"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:id="@+id/tvWorkDurationNumber"
                    android:layout_width="30dp"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textColor="@color/bgButtom"
                    android:background="@drawable/textbox"
                    android:layout_height="30dp"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="7dp"
                android:id="@+id/tvBreakDuration"
                android:layout_width="wrap_content"
                android:text="@string/Break_Duration"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:padding="2dp"
                android:id="@+id/tvBreakDurationNumber"
                android:layout_width="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/bgButtom"
                android:background="@drawable/textbox"
                android:layout_height="30dp"/>
        </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:id="@+id/tvLongBreakEnable"
                    android:layout_width="wrap_content"
                    android:text="@string/Long_Break_Enable"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:layout_height="wrap_content"/>

                <Switch
                    android:layout_alignBaseline="@id/tvLongBreakEnable"
                    android:id="@+id/swtLongBreak"
                    android:scrollbarStyle="insideOverlay"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@id/tvLongBreakEnable"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="7dp"
                android:id="@+id/tvLongBreakDuration"
                android:layout_width="wrap_content"
                android:text="@string/Long_Break_Duration"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:padding="2dp"
                android:id="@+id/tvLongBreakDurationNumber"
                android:layout_width="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/bgButtom"
                android:background="@drawable/textbox"
                android:layout_height="30dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="7dp"
                android:id="@+id/tvWorkSessions"
                android:layout_width="wrap_content"
                android:text="@string/Work_sessions"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_gravity="center"
                android:padding="2dp"
                android:id="@+id/tvWorkSessionsNumber"
                android:layout_width="30dp"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/bgButtom"
                android:background="@drawable/textbox"
                android:layout_height="30dp"/>
        </LinearLayout>
            <TextView
                android:layout_marginTop="7dp"
                android:background="@color/bgButtom"
                android:layout_width="match_parent"
                android:layout_height="2dp" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:text="@string/Notifications"
                android:gravity="center"
                android:textSize="40sp"
                android:textColor="@color/bgButtom"
                android:padding="10dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/Break_Duration"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="7dp"
                android:layout_width="match_parent"
                android:text="@string/Break_Duration"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
